--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -63,6 +63,9 @@
             ViewBag.SubTitle = "Sponzorují noví poslanci politické strany? A mají obchodní vztahy se státem?";
             break;
         case 17:
+            //TODO
+            Response.Redirect("/");
+            Response.End();
             ViewBag.Title = "Úřady obchodující s nespolehlivými plátci DPH";
             break;
         case 18:
@@ -86,6 +89,9 @@
             ViewBag.SubTitle = "";
             break;
         case 23:
+            //TODO
+        Response.Redirect("/");
+        Response.End();
             ViewBag.Title = "Firmy a holdingy s největšími obchodními vztahy se státem ";
             ViewBag.SubTitle = "Za rok 2018";
             ViewBag.SocialShareHtml = @"<b>V roce 2018 se státem nejvíce obchodovaly</b> tyto holdingy:
@@ -103,6 +109,10 @@ XINTEXT (0->0.7mld),
             ViewBag.SocialShareHtmlFooter = "Holdingy s největšími obchodními vztahy se státem";
             break;
         case 24:
+                        //TODO
+            Response.Redirect("/");
+            Response.End();
+
             ViewBag.Title = "Osoby s největšími obchodními vztahy se státem dle registru smluv ";
             ViewBag.SubTitle = "Za rok 2018";
             break;
