--- a/Web.Statu/Views/Home/Reports/17_UradyObchodujiciSNespolehlivymiPlatciDPH.cshtml
+++ b/Web.Statu/Views/Home/Reports/17_UradyObchodujiciSNespolehlivymiPlatciDPH.cshtml
@@ -1,4 +1,4 @@
-﻿@using System
+﻿@*@using System
 @using System.Collections.Generic
 @using System.Linq
 @using System.Web
@@ -199,4 +199,4 @@ return sb.ToString();
         'lengthChange': false,
         'info': false,
         }", "t1")
-)
+)*@
