--- a/Web.Statu/Views/Home/Reports/24_TopOsobyStat.cshtml
+++ b/Web.Statu/Views/Home/Reports/24_TopOsobyStat.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@using System
+@*@using System
 @using System.Collections.Generic
 @using System.Linq
 @using Devmasters.Enums;
@@ -156,7 +156,7 @@ CssClass ="text-right number"
     'lengthChange': false,
     'info': false,
     }", "t1")
-        )
+        )*@
 
 
 
