--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -145,13 +145,13 @@
                 </p>
                 <p><a class="btn btn-default" href="/Report/24" role="button">Podrobnosti »</a></p>
             </div>
-            <div class="col-block-shadow ">
+            @*<div class="col-block-shadow ">
                 <h3><a href="/Report/23">2018: Firmy a holdingy s největšími obchodními vztahy se státem</a></h3>
                 <p>
                     Firmy a holdingy s největšími obchodními vztahy se státem dle registru smluv v roce 2018
                 </p>
                 <p><a class="btn btn-default" href="/Report/23" role="button">Podrobnosti »</a></p>
-            </div>
+            </div>*@
             <div class="col-block-shadow ">
                 <h3><a href="/Report/21">Členové vlády 2014-2018</a></h3>
                 <p>Kdo jsou poradci na úřadu vlády? Obchodují jejich firmy se státem? Hrozí jim nějaký konflikt zájmů?</p>
