--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -380,7 +380,7 @@ else
     <div class="table-new searching__watcher__table">
         @if (result.Total > maxItems)
         {
-<h4>Zobrazujeme @(Devmasters.Lang.Plural.Get((int)maxItems, "první výsledek", "první {0} výsledky", "prvních {0} výsledků"))</h4>}
+<h4>Zobrazujeme @(Devmasters.Lang.Plural.Get(maxItems, "první výsledek", "první {0} výsledky", "prvních {0} výsledků"))</h4>}
         <table class="table table-hover">
             <thead>
                 @SearchResults.VZHeader(skipBookmark)
