--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -8,26 +8,27 @@
 
 @{ 
     ViewBag.SocialShareTitle = "Politik " + Model.FullName() + " na hlidacstatu.cz";
-ViewBag.SocialShareText = Model.FullName() + ": " + Model.InfoFacts().RenderInfoFacts(2, true, true);
-ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/osoba?d={DateTime.Now.ToString("d.M.yy")}&v=" + Model.NameId;
-ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
-            + "<meta property=\"og:image:height\" content=\"1080\" />"
-            + "<meta property=\"og:image:type\" content=\"image/png\" />"
-            ;
+    ViewBag.SocialShareText = Model.FullName() + ": " + Model.InfoFacts().RenderInfoFacts(2, true, true);
+    ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/osoba?d={DateTime.Now.ToString("d.M.yy")}&v=" + Model.NameId;
+    ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
+                + "<meta property=\"og:image:height\" content=\"1080\" />"
+                + "<meta property=\"og:image:type\" content=\"image/png\" />"
+                ;
 
-HlidacStatu.Lib.Data.Relation.AktualnostType aktualnost = (HlidacStatu.Lib.Data.Relation.AktualnostType)ViewBag.Aktualnost;
+    HlidacStatu.Lib.Data.Relation.AktualnostType aktualnost = (HlidacStatu.Lib.Data.Relation.AktualnostType)ViewBag.Aktualnost;
 
-var ostat = new HlidacStatu.Lib.Analysis.OsobaStatistic(Model.NameId, HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, false);
+    var ostat = Model.StatistikaRegistrSmluv(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny);
+    //(Model.NameId, HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, false);
 
-ViewBag.HideTitle = true;
+    ViewBag.HideTitle = true;
 
-bool noIndex = HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower());
+    bool noIndex = HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower());
 
-//TODO better analysis based on records in other dbs
-bool noReasonToShow = Model.NotInterestingToShow();
+    //TODO better analysis based on records in other dbs
+    bool noReasonToShow = Model.NotInterestingToShow();
 
 
-ViewBag.Title = (noReasonToShow ? Model.FullName() : Model.FullNameWithYear()); 
+    ViewBag.Title = (noReasonToShow ? Model.FullName() : Model.FullNameWithYear());
 }
 
 @section metatags
