--- a/Web.Statu/Views/Home/Reports/12_SmlouvyBezUvedeneCenySouhrn.cshtml
+++ b/Web.Statu/Views/Home/Reports/12_SmlouvyBezUvedeneCenySouhrn.cshtml
@@ -52,11 +52,13 @@ new ReportDataSource.Column() {
 
     foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perIco"]).Items)
     {
+        var ico = (string)val.Key;
+        var f = HlidacStatu.Lib.Data.Firmy.Get(ico);
         rdsPerIco.AddRow(
-            new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
+            new Tuple<string, string>(f.Jmeno, (string)val.Key),
             val.DocCount.ToString(),
-            HlidacStatu.Lib.Analysis.ACore.GetBasicStatisticForICO((string)val.Key).Summary.Pocet,
-            (double)val.DocCount / (double)HlidacStatu.Lib.Analysis.ACore.GetBasicStatisticForICO((string)val.Key).Summary.Pocet
+            f.StatistikaRegistruSmluv().Summary().PocetSmluv,
+            (double)val.DocCount / (double)f.StatistikaRegistruSmluv().Summary().PocetSmluv
             );
     }
 
