--- a/Web.Statu/Views/Home/Reports/23_TopSubjektyStat.cshtml
+++ b/Web.Statu/Views/Home/Reports/23_TopSubjektyStat.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@using System
+@*@using System
 @using System.Collections.Generic
 @using System.Linq
 @using System.Web
@@ -14,32 +14,33 @@
 @using HlidacStatu.Lib.Data
 @using HlidacStatu.Lib.Render
 
-@{ Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear> firmyL =
-                    new Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>();
+@{
+    Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear> firmyL =
+                     new Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>();
 
-                Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear> osobyL =
-                       new Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>();
+    Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear> osobyL =
+           new Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>();
 
-                Relation.AktualnostType aktualnost = Relation.AktualnostType.Aktualni;
-                firmyL = Newtonsoft.Json.JsonConvert.DeserializeObject<Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>(
-                    System.IO.File.ReadAllText(StaticData.App_Data_Path + $@"topFirmyStats.2018.{aktualnost.ToString()}.json")
-                    );
+    Relation.AktualnostType aktualnost = Relation.AktualnostType.Aktualni;
+    firmyL = Newtonsoft.Json.JsonConvert.DeserializeObject<Dictionary<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>(
+        System.IO.File.ReadAllText(StaticData.App_Data_Path + $@"topFirmyStats.2018.{aktualnost.ToString()}.json")
+        );
 
 
-                var topF = firmyL
-                    .OrderByDescending(o => o.Value.Data[2018].CelkemCena)
-                    //.ThenByDescending(o => o.Value.Summary.Pocet)
-                    .ToArray();
+    var topF = firmyL
+        .OrderByDescending(o => o.Value.Data[2018].CelkemCena)
+        //.ThenByDescending(o => o.Value.Summary.Pocet)
+        .ToArray();
 
-                var scale = HlidacStatu.Util.RenderData.GetBestScale(
-                    topF
-                        .Select(m => m.Value.Data[2017].CelkemCena)
-                        .Union(topF.Select(m => m.Value.Data[2018].CelkemCena))
-                    ); //calculate it
-                scale = HlidacStatu.Util.RenderData.MaxScale.Miliarda; //manual settings
+    var scale = HlidacStatu.Util.RenderData.GetBestScale(
+        topF
+            .Select(m => m.Value.Data[2017].CelkemCena)
+            .Union(topF.Select(m => m.Value.Data[2018].CelkemCena))
+        ); //calculate it
+    scale = HlidacStatu.Util.RenderData.MaxScale.Miliarda; //manual settings
 
-                var tableSloupce = new ReportDataSource<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>.Column[]
-                    {
+    var tableSloupce = new ReportDataSource<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>.Column[]
+        {
 new  ReportDataSource<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>.Column() {
 Name ="Firma",
 HtmlRender = (s) => {
@@ -98,13 +99,13 @@ return HlidacStatu.Util.RenderData.OrderValueFormat(s.Value.Summary.CelkemCena);
 },
 CssClass ="text-right number"
 },
-        };
+    };
 
-                var rds1 = new ReportDataSource<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>(tableSloupce);
-                foreach (var i in topF)
-                {
-                    rds1.AddRow(i);
-                } }
+    var rds1 = new ReportDataSource<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>(tableSloupce);
+    foreach (var i in topF)
+    {
+        rds1.AddRow(i);
+    } }
 <h3>Firmy a holdingy s největšími obchodními vztahy se státem dle registru smluv v roce 2018</h3>
 <p class="text-muted">
     <b>Data jsou platná k 1.1.2018. </b>
@@ -120,11 +121,11 @@ CssClass ="text-right number"
                 new[] {
                     rds1.Filter(new int[] { 0, 1 }, 20,"2018" ),
                     rds1.Filter(new int[] { 0, 2 }, 20,"2017" ),
-                        },
+                                    },
             tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>",
             loadEvents: @"function(event) {
-        this.series.forEach(function(d,i){if(d.index==1)d.hide()})
-    }"
+this.series.forEach(function(d,i){if(d.index==1)d.hide()})
+}"
             ), ""
         )
 
@@ -134,7 +135,7 @@ CssClass ="text-right number"
                 new[] {
                     rds1.Clone(topF.OrderByDescending(o=>o.Value.YearChange(2018).CenaChangePerc),
                         new int[]{0,3}, 20),
-                        },
+                                    },
             tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>"
             ), ""
         )
@@ -142,15 +143,15 @@ CssClass ="text-right number"
 @Html.Raw(
     UtilChart.RenderReportTableT<KeyValuePair<string, HlidacStatu.Lib.Analysis.BasicDataPerYear>>(
         "", rds1, @"{
-     'language': {
-        'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
-    },
-    'pageLength': 25,
-    'order': [],
-    'lengthChange': false,
-    'info': false,
-    }", "t1")
-        )
+'language': {
+'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
+},
+'pageLength': 25,
+'order': [],
+'lengthChange': false,
+'info': false,
+}", "t1")
+        )*@
 
 
 
