--- a/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
@@ -186,7 +186,7 @@
                     <a href="/hledat?q=ico:@(Model.Firma.ICO) AND cena:0 AND datumUzavreni:[@(currentSeasonYear)-01-01 TO @(currentSeasonYear + 1)-01-01}">
                         <strong>@(seasonStat.PocetSmluvBezCeny)</strong>
                         smluv
-                    </a>, což je celkem @(seasonStat.PercentSmluvBezCeny().ToString("P2")) % ze všech.
+                    </a>, což je celkem @(seasonStat.PercentSmluvBezCeny.ToString("P2")) % ze všech.
                 </p>
             </div>
 
@@ -232,7 +232,7 @@
                         @{ ReportDataSource rdsbezCenyPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "% smluv",
                                                             statistics.Years
                                                                 .Where(k => k.Key >= chartMinDate && k.Key <= chartMaxDate)
-                                                                .ToDictionary(k => new DateTime(k.Key, 1, 1), v => (decimal)v.Value.PercentSmluvBezCeny() * 100)
+                                                                .ToDictionary(k => new DateTime(k.Key, 1, 1), v => (decimal)v.Value.PercentSmluvBezCeny * 100)
                                                             );
 
                             @UtilChart.RenderReportChart("% smluv s utajenou cenou ", UtilChart.SimpleBarChart(
@@ -265,7 +265,7 @@
                             @{ ReportDataSource rdsPolitikPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "% smluv",
                                                                       statistics.Years
                                                                       .Where(k => k.Key >= chartMinDate && k.Key <= chartMaxDate)
-                                                                      .ToDictionary(k => new DateTime(k.Key, 1, 1), v => (decimal)v.Value.PercentSmluvPolitiky() * 100)
+                                                                      .ToDictionary(k => new DateTime(k.Key, 1, 1), v => (decimal)v.Value.PercentSmluvPolitiky * 100)
                                                                       );
 
                                 @UtilChart.RenderReportChart("% smluv s vazbou na politiky", UtilChart.SimpleBarChart(
@@ -288,12 +288,12 @@
                     <h4>Statistiky pro subjekt a všechny dceřinné společnosti od 2016</h4>
                     <div>
                         @Html.Raw(NiceString($"/hledat?q=holding:{Model.Firma.ICO}", (int)holdingSummaryAfter2016.PocetSmluv, holdingSummaryAfter2016.CelkovaHodnotaSmluv))<br />
-                        @(holdingSummaryAfter2016.PercentSmluvBezCeny().ToString("P1")) smluv se skrytou cenou<br />
-                        @(holdingSummaryAfter2016.PercentSmluvBezSmluvniStrany().ToString("P1")) smluv se skrytou smluvní stranou<br />
+                        @(holdingSummaryAfter2016.PercentSmluvBezCeny.ToString("P1")) smluv se skrytou cenou<br />
+                        @(holdingSummaryAfter2016.PercentSmluvBezSmluvniStrany.ToString("P1")) smluv se skrytou smluvní stranou<br />
                         @if (Model.Firma.PatrimStatu())
                         {
                             <text>
-                                @(holdingSummaryAfter2016.PercentSmluvPolitiky().ToString("P1"))smluv s firmami navázanými na politiky
+                                @(holdingSummaryAfter2016.PercentSmluvPolitiky.ToString("P1"))smluv s firmami navázanými na politiky
                             </text>}
                     </div>
                 </div>
@@ -326,9 +326,9 @@
                                     <tr>
                                         <td>@bs.Key</td>
                                         <td class="number">@bs.Value.PocetSmluvPolitiky</td>
-                                        <td class="number">@bs.Value.PercentSmluvPolitiky().ToString("P2")</td>
+                                        <td class="number">@bs.Value.PercentSmluvPolitiky.ToString("P2")</td>
                                         <td class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(bs.Value.SumKcSmluvPolitiky, html: true))</td>
-                                        <td class="number">@bs.Value.PercentKcSmluvPolitiky().ToString("P2")</td>
+                                        <td class="number">@bs.Value.PercentKcSmluvPolitiky.ToString("P2")</td>
                                     </tr>
                                 }
                             </tbody>
@@ -336,9 +336,9 @@
                                 <tr>
                                     <th>Celkem</th>
                                     <th class="number">@summarryAfter2016.PocetSmluvPolitiky</th>
-                                    <th class="number">@summarryAfter2016.PercentSmluvPolitiky().ToString("P2")</th>
+                                    <th class="number">@summarryAfter2016.PercentSmluvPolitiky.ToString("P2")</th>
                                     <th class="number">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(summarryAfter2016.SumKcSmluvPolitiky, html: true))</th>
-                                    <th class="number">@summarryAfter2016.PercentKcSmluvPolitiky().ToString("P2")</th>
+                                    <th class="number">@summarryAfter2016.PercentKcSmluvPolitiky.ToString("P2")</th>
                                 </tr>
                             </tfoot>
                         </table>
